--- a/app/static/css/templates/_quizzes.scss
+++ b/app/static/css/templates/_quizzes.scss
@@ -221,12 +221,16 @@ body {
 
     &__hider {
         display: flex;
-        width: 35rem;
+        width: 34   rem;
         min-height: 37rem;
         overflow: hidden;
         position: relative;
         bottom: 3.5rem;
-        z-index: 1;   
+        z-index: 1;
+
+        @include breakpoints-down(medium) {
+            width: 27rem;
+        }
     }
 
     &__4option {
